# thebible

./: .gitignore  .railwayignore  CONTROL_PANEL_SSH.md  Cargo.toml  DEPLOYMENT.md  DEPLOY_NOW.md  LINODE_DEPLOY.md  LINODE_QUICK_REF.md  QUICK_DEPLOY.md  README.md  SHARED_HOSTING_DEPLOY.md  SSH_AUTHORIZED_KEY.md  SSH_KEY_SETUP.md  SSH_SETUP.md  SSH_TROUBLESHOOTING.md  STATIC_FILES.md  UPLOAD_FILES.md  VIDEO_SUPPORT.md  check-dns-setup.sh  check-zone-file.sh  deploy.sh  fix-build.sh  fix-dns-and-retry-ssl.sh  fix-ssl-setup.sh  fly.toml  linode-deploy.sh  nginx.conf.example  post-build-setup.sh  push-to-git.sh  quick-deploy.sh  railway-deploy.sh  railway.json  setup-dns-zone.sh  setup-domain-ssl.sh  setup-ip-access.sh  setup-krugerbdg-ssl.sh  setup-ssl-thebibl.sh  setup-thebibl-ssl.sh  upload-to-linode.sh  verify-and-fix-upload.sh  (+1 more)
src/: config.rs  error.rs  handlers.rs  lib.rs
src/api/: bible_brain.rs  helloao.rs  mod.rs
static/: index.html
systemd/: thebible.service
